<resources>
    <string name="app_name">TAMETU</string>
    <string name="work_duration">Work duration :</string>
    <string name="short_break_duration">Short Break duration :</string>
    <string name="long_break_duration">Long Break duration :</string>
    <string name="work_duration_key">WORK_DURATION</string>
    <string name="lba">Start Long Break after :</string>
    <string name="set_ticking_volume">Set ticking volume :</string>
    <string name="set_ringing_volume">Set ringing volume :</string>


    <string name="short_break_duration_key">SHORT_BREAK_DURATION</string>
    <string name="long_break_duration_key">LONG_BREAK_DURATION</string>
    <string name="work_session_count_key">WORK_SESSION_COUNT</string>
    <string name="task_on_hand_count_key">TASK_ON_HAND_COUNT</string>
    <string name="start_long_break_after_key">LONG_BREAK_AFTER_DURATION</string>
    <string-array name="work_duration_array">
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
        <item>40 minutes</item>
        <item>55 minutes</item>
    </string-array>
    <string-array name="short_break_duration_array">
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
    </string-array>
    <string-array name="start_long_break_after_array">
        <item>2 sessions</item>
        <item>3 sessions</item>
        <item>4 sessions</item>
        <item>5 sessions</item>
        <item>6 sessions</item>
    </string-array>
    <string-array name="long_break_duration_array">
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
    </string-array>

    <string name="current_task">Current Task</string>
    <string name="change_task">Change</string>
    <string name="task_name">Task 1</string>
    <string name="work_sessions_completed">Work sessions completed</string>
    <string name="complete_imageview_content_desc">Complete Image</string>
    <string name="settings_imageview_content_desc">Settings Image</string>
    <string name="start_tametu">Start Tamétû</string>
    <string name="cancel_tametu">Cancel Tamétû</string>
    <string name="start_short_break">Start Short Break</string>
    <string name="skip_short_break">Skip Short Break</string>
    <string name="start_long_break">Start Long Break</string>
    <string name="skip_long_break">Skip Long Break</string>
    <string name="skip_break">Skip Break</string>
    <string name="currently_running_service_type_key">CURRENTLY_RUNNING_SERVICE_TYPE</string>
    <string name="tametu_completion_alert_message">Congrats, Tamétû is over.\n\nIt\'s time for a break.</string>
    <string name="cancel_notification_toast">Cancel</string>
    <string name="package_name">gis2018.udacity.tametu</string>
    <string name="intro">The Pomodoro technique is a simple idea of tricking oneself into working/studying for short 25-minute intervals for a return of short 5/5/5/15-minute break cycles.The motive behind this was to have a Pomodoro better than what is already on market, but in order to avoid copyright issues, we cannot use the term Pomodoro. We can craft this to sound a little better .We aimed to build a simple productivity timer that is helpful and lovable. Tamétû likes to keep things simple and is therefore an ensemble of just the most required features.</string>
    <string name="creation">Students of Google India Udacity Scholarship and NJACK Winter of Code Participants</string>
    <string name="break_over_notification_title">Break\'s over.</string>
    <string name="session_over_notification_content_text">Time to relax. Start a break</string>
    <string name="break_over_notification_content_text">Let\'s get this done.</string>
    <string name="tametu_completion_notification_message">Congrats, you completed a session.</string>
    <string name="splash_act_name">Tametu Timer</string>
    <string name="tagline">Getting things done, faster</string>
</resources>
